--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,7 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+FZAirMeal-Swift/FZAirMeal/Buisness Layer/Repository/.DS_Store
+FZAirMeal-Swift/FZAirMeal/.DS_Store
+FZAirMeal-Swift/.DS_Store
+.DS_Store
